fill section, nav panel and modal

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-
+<section class="container-fluid">
+    <a class="btn btn-warning" href="index.html">To HOME page</a>
+</section>
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
     <div class="container">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
@@ -469,24 +471,6 @@
         Nav Menus
     </div>
     <div class="row">
-        <div class="col-12">
-            <ul class="nav nav-pills nav-justified">
-                <li class="nav-item">
-                    <a href="#" class="nav-link active">Link 1</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Link Dropdown</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Link</a>
-                        <a class="dropdown-item" href="#">Link</a>
-                        <a class="dropdown-item" href="#">Link</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link disabled">Disable</a>
-                </li>
-            </ul>
-        </div>
         <div class="col-12">
             <ul class="nav nav-tabs">
                 <li class="nav-item">
