--- a/index.html
+++ b/index.html
@@ -20,39 +20,48 @@
         </div>
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">
-                    <div>
-                        <button type="button" class="btn btn-sm btn-success" data-toggle="modal" data-target="#myModal">
-                            Hello
-                        </button>
-                        <div class="modal fade" id="myModal">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    </div>
-                                    <div class="modal-body">
-
-                                        <img src="img/avatar.jpg" width="50">
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
-                                        </button>
-                                    </div>
-                                </div>
+                <!--<div class="nav-link">-->
+                <button type="button" class=" nav-link btn btn-outline-primary" data-toggle="modal"
+                        data-target="#myModal">
+                    Hello
+                </button>
+                <div class="modal fade" id="myModal">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header align-content-center   ">
+                                <h2>Welcome</h2>
+                                <img src="img/avatar.jpg" width="50">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            </div>
+                            <div class="modal-body">
+                               <h2>this Andrii`s personal page =)</h2>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                             </div>
                         </div>
                     </div>
-                </a>
+                </div>
+                <!--</div>-->
             </li>
             <li class="nav-item ml-2">
-                <a class="nav-link" href="#">Facebook</a>
+                <a class="nav-link" href="https://www.facebook.com/andrei.ponomarenko.18/">Facebook</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">LinkedIn</a>
+                <a class="nav-link" href="https://www.linkedin.com/in/andrei-ponomarenko-133b71121/">LinkedIn</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">GitHub</a>
+                <a class="nav-link" href="https://github.com/3355844">GitHub</a>
+            </li>
+            <li class="nav-item dropdown">
+                <button type="button" class="nav-link btn btn-outline-primary dropdown-toggle" id="drdMenu"
+                        data-toggle="dropdown">Examples
+                </button>
+                <div class="dropdown-menu" aria-labelledby="drdMenu">
+                    <a class="dropdown-item" href="bootstrap.html">Bootstrap</a>
+                    <a class="dropdown-item" href="#">Example</a>
+                    <a class="dropdown-item" href="#">Node.js + MongoDb</a>
+                </div>
             </li>
         </ul>
     </nav>
@@ -85,8 +94,25 @@
         <div class="col-1"></div>
         <div class="col-8">
             <div id="section1" class="bg-success">
-                <h1>Section 1</h1>
-                <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+                <h1>About Me</h1>
+                <h2>Full stack Developer (Junior JavaScript/Java)</h2>
+                <h3>Age 31, married, have a son three years</h3>
+                <p>
+                    The main goal - Start a career developer in the company and in 5 years to grow up to Team lead
+                    level.
+                    Contacts:
+                    Kiev, Ukraine
+                    Tel. +38093-33-55-844
+                    I like to think, learn and communicate. I work a lot and with pleasure. In return, I look forward to
+                    interesting projects, worthy of payment and the possibility of growth.
+                    Call me to discuss all the details and, hopefully, see you at the interview.
+                    Personal qualities:
+                    Analytical skills, responsibility, ability to learn quickly, initiative, focus on results,
+                    integrity, ability to fast / independent decision-making, the desire to improve professional skills
+                    / self / professional growth / development, self-confidence, ability to adapt to change, ability to
+                    team, persuasiveness, sense of humor.
+
+                </p>
             </div>
             <div id="section2" class="bg-warning">
                 <h1>Section 2</h1>
