fill section about and Dev skills

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -683,17 +683,8 @@
 <section class="container">
     <div class="row h2">Tooltip</div>
     <div class="row">
-        <a href="#" data-toggle="tooltip" class="btn btn-success" title="WACh!">Click here</a>
+        <a href="#" data-toggle="tooltip" class="btn btn-success" title="WACh!">Hover here</a>
     </div>
-</section>
-
-<!--Popover-->
-<section class="container">
-    <div class="row h2">
-        Popover
-    </div>
-    <a data-toggle="popover" title="WACh!" data-content="This is content" class="btn btn-warning" href="#">Toggle
-        popover</a>
 </section>
 
 </body>
