--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
     <nav class="navbar  navbar-toggleable-sm bg-inverse navbar-inverse d-flex ">
         <div class="navbar-brand">
             WACh
-            <img style="width:40px;" src="img/avatar.jpg">
+            <img class="rounded" style="width:40px;" src="img/WYOjikL33t4.jpg">
         </div>
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <!--<div class="nav-link">-->
                 <button type="button" class=" nav-link btn btn-outline-primary" data-toggle="modal"
                         data-target="#myModal">
                     Hello
@@ -29,12 +28,12 @@
                     <div class="modal-dialog">
                         <div class="modal-content">
                             <div class="modal-header align-content-center   ">
-                                <h2>Welcome</h2>
+                                <h2 class="text-center">Welcome</h2>
                                 <img src="img/avatar.jpg" width="50">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
-                               <h2>this Andrii`s personal page =)</h2>
+                                <h2 class="text-center">this Andrii`s personal page =)</h2>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -42,7 +41,6 @@
                         </div>
                     </div>
                 </div>
-                <!--</div>-->
             </li>
             <li class="nav-item ml-2">
                 <a class="nav-link" href="https://www.facebook.com/andrei.ponomarenko.18/">Facebook</a>
@@ -53,11 +51,15 @@
             <li class="nav-item">
                 <a class="nav-link" href="https://github.com/3355844">GitHub</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://github.com/3355844">One more Link</a>
+            </li>
             <li class="nav-item dropdown">
                 <button type="button" class="nav-link btn btn-outline-primary dropdown-toggle" id="drdMenu"
                         data-toggle="dropdown">Examples
                 </button>
                 <div class="dropdown-menu" aria-labelledby="drdMenu">
+                    <h2 class="dropdown-header">JavaScript</h2>
                     <a class="dropdown-item" href="bootstrap.html">Bootstrap</a>
                     <a class="dropdown-item" href="#">Example</a>
                     <a class="dropdown-item" href="#">Node.js + MongoDb</a>
@@ -66,66 +68,81 @@
         </ul>
     </nav>
 </section>
-<div class="container">
+<section class="container">
     <div class="row">
         <nav class="col-2" id="myScrollspy">
             <ul class="nav nav-pills flex-column col-2 mt-5">
                 <li class="card">
                     <img class="card-img-top w-100" src="img/photo.jpg">
                     <div class="card-body">
-                        <h5>Andrii P.</h5>
-                        <p>JavaScript/Java Developer</p>
+                        <h5 class="text-center">Andrii P.</h5>
+                        <p class="text-center">JavaScript/Java Developer</p>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="#section1">About Me</a>
+                    <a class="nav-link active text-center" href="#section1">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#section2">Develop skills</a>
+                    <a class="nav-link text-center" href="#section2">Develop skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#section3">Education & Experience</a>
+                    <a class="nav-link text-center" href="#section3">Education & Experience</a>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="#section4">Photos</a>
+                <li class="nav-item">
+                    <a class="nav-link text-center" href="#section4">Photos</a>
                 </li>
             </ul>
         </nav>
         <div class="col-1"></div>
         <div class="col-8">
-            <div id="section1" class="bg-success">
-                <h1>About Me</h1>
-                <h2>Full stack Developer (Junior JavaScript/Java)</h2>
-                <h3>Age 31, married, have a son three years</h3>
-                <p>
-                    The main goal - Start a career developer in the company and in 5 years to grow up to Team lead
-                    level.
-                    Contacts:
-                    Kiev, Ukraine
-                    Tel. +38093-33-55-844
-                    I like to think, learn and communicate. I work a lot and with pleasure. In return, I look forward to
+            <div id="section1" class="text-center">
+                <h1>Ponomarenko Andrii</h1>
+                <h2>Junior Full stack Developer <br> (JavaScript / Java)</h2>
+                <p class="font-weight-bold">Age 31, married, have a son three years</p>
+                <p class="text-left"><span class="font-weight-bold"> The main goal</span> - Start a career developer in
+                    the company and in 5 years to grow up to Team lead
+                    level.</p>
+                <p class="font-weight-bold text-left">Contacts:</p>
+                <p class="text-left"> Kiev, Ukraine</p>
+                <p class="text-left">Tel. +38(093)-33-55-844</p>
+                <p class="text-left">Email: 3355844@gmail.com</p>
+                <p class="text-left"><span class="font-weight-bold">About: </span> I like to think, learn and
+                    communicate. I work a lot and with pleasure. In return, I look forward to
                     interesting projects, worthy of payment and the possibility of growth.
-                    Call me to discuss all the details and, hopefully, see you at the interview.
-                    Personal qualities:
+                    Call me to discuss all the details and, hopefully, see you at the interview.</p>
+                <p class="text-left"><span class="font-weight-bold">Personal qualities:</span>
                     Analytical skills, responsibility, ability to learn quickly, initiative, focus on results,
                     integrity, ability to fast / independent decision-making, the desire to improve professional skills
                     / self / professional growth / development, self-confidence, ability to adapt to change, ability to
                     team, persuasiveness, sense of humor.
-
                 </p>
             </div>
-            <div id="section2" class="bg-warning">
-                <h1>Section 2</h1>
-                <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+            <div id="section2">
+                <h2 class="text-center">Developer skills</h2>
+                <p><span class="font-weight-bold">OOP</span> and design patterns(GoF, GRASP);</p>
+                <p><span class="font-weight-bold">Java 2EE :</span> (Annotations, Reflection, XML, JAXB, SAX, JSON,
+                    JDBC, Servlet, JPA (Hibernate), Spring IoC,
+                    Spring MVC, Spring Boot, Spring Security, Apache POI, JavaFX.</p>
+                <p><span class="font-weight-bold">Development tools :</span> Intellij IDEA, Eclipse, Sublime Text,
+                    Maven, Tom Cat, Git.</p>
+                <p><span class="font-weight-bold">Data : </span> MySQL, MongoDB</p>
+                <p><span class="font-weight-bold">Front End : </span> HTML, CSS, Bootstrap</p>
+                <p><span class="font-weight-bold">  JavaScript : </span>JavaScript, jQuery, Ajax, Node.js (npm)</p>
+                <h2 class="text-center">Languages</h2>
+                <p>English - Intermediate</p>
+                <p> Ukrainian – Mother</p>
+                <p> Russian – Free</p>
             </div>
             <div id="section3" class="bg-secondary">
-                <h1>Section 3</h1>
-                <p>Try to scroll this section and look at the navigation list while scrolling!</p>
+                <h2>Education</h2>
+                <p></p>
+                <h2>Experience</h2>
+                <p></p>
             </div>
             <div id="section4" class="bg-danger">
                 <div class="row">
                     <div id="demo" class="carousel slide img-thumbnail col-12" data-ride="carousel">
-                        <h2>Photos</h2>
+                        <h2 class="text-center">Photos</h2>
                         <ul class="carousel-indicators">
                             <li data-target="#demo" data-slide-to="0" class="active"></li>
                             <li data-target="#demo" data-slide-to="1"></li>
@@ -133,7 +150,7 @@
                             <li data-target="#demo" data-slide-to="3"></li>
                         </ul>
 
-                        <div class="carousel-inner align-content-center">
+                        <div class="carousel-inner text-center">
                             <div class="carousel-item active">
                                 <img height="450" src="img/18485628_1912636402350110_4287044080093224481_n.jpg">
                             </div>
@@ -158,7 +175,15 @@
             </div>
         </div>
     </div>
-</div>
+</section>
+<section class="container">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-9 text-center">
+            <h2>The END page</h2>
+        </div>
+    </div>
+</section>
 </body>
 <script src="js/main.js"></script>
 
