Fills is finished... Examples Start

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body data-spy="scroll">
 <!--Nav Bar-->
 <section class="container-fluid">
-    <nav class="navbar  navbar-toggleable-sm bg-inverse navbar-inverse d-flex ">
-        <div class="navbar-brand">
+    <nav class="navbar  navbar-toggleable-sm bg-inverse navbar-inverse d-flex">
+        <div class="navbar-brand ml-4">
             WACh
             <img class="rounded" style="width:40px;" src="img/WYOjikL33t4.jpg">
         </div>
@@ -27,13 +27,14 @@
                 <div class="modal fade" id="myModal">
                     <div class="modal-dialog">
                         <div class="modal-content">
-                            <div class="modal-header align-content-center   ">
-                                <h2 class="text-center">Welcome</h2>
+                            <div class="modal-header text-center">
+                                <h2 class="ml-5">Welcome</h2>
                                 <img src="img/avatar.jpg" width="50">
                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                             </div>
                             <div class="modal-body">
                                 <h2 class="text-center">this Andrii`s personal page =)</h2>
+                                <p>Here you can find many information about Me & work examples...</p>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -100,11 +101,15 @@
                 <h2>Junior Full stack Developer <br> (JavaScript / Java)</h2>
                 <p class="font-weight-bold">Age 31, married, have a son three years</p>
                 <p class="text-left"><span class="font-weight-bold"> The main goal</span> - Start a career developer in
-                    the company and in 5 years to grow up to Team lead
+                    the company and in 5 years grow up to Team lead
                     level.</p>
                 <p class="font-weight-bold text-left">Contacts:</p>
                 <p class="text-left"> Kiev, Ukraine</p>
-                <p class="text-left">Tel. +38(093)-33-55-844</p>
+                <p class="text-left">Tel. +38(093)-33-55-844
+                    <span class="text-success">(WhatsApp) </span>
+                    <span class="text-danger">(Viber)</span>
+                    <span class="text-primary"> (Telegram)</span>
+                </p>
                 <p class="text-left">Email: 3355844@gmail.com</p>
                 <p class="text-left"><span class="font-weight-bold">About: </span> I like to think, learn and
                     communicate. I work a lot and with pleasure. In return, I look forward to
@@ -123,21 +128,83 @@
                 <p><span class="font-weight-bold">Java 2EE :</span> (Annotations, Reflection, XML, JAXB, SAX, JSON,
                     JDBC, Servlet, JPA (Hibernate), Spring IoC,
                     Spring MVC, Spring Boot, Spring Security, Apache POI, JavaFX.</p>
-                <p><span class="font-weight-bold">Development tools :</span> Intellij IDEA, Eclipse, Sublime Text,
+                <p><span class="font-weight-bold">Development & tools :</span> Intellij IDEA, WebStorm, PhpStorm,
+                    Eclipse, Sublime Text,
                     Maven, Tom Cat, Git.</p>
                 <p><span class="font-weight-bold">Data : </span> MySQL, MongoDB</p>
                 <p><span class="font-weight-bold">Front End : </span> HTML, CSS, Bootstrap</p>
                 <p><span class="font-weight-bold">  JavaScript : </span>JavaScript, jQuery, Ajax, Node.js (npm)</p>
                 <h2 class="text-center">Languages</h2>
-                <p>English - Intermediate</p>
-                <p> Ukrainian – Mother</p>
-                <p> Russian – Free</p>
+                <p><span class="font-weight-bold">English</span> - Intermediate</p>
+                <p><span class="font-weight-bold">Ukrainian</span> – Mother</p>
+                <p><span class="font-weight-bold">Russian</span> – Free</p>
             </div>
             <div id="section3" class="bg-secondary">
-                <h2>Education</h2>
-                <p></p>
-                <h2>Experience</h2>
-                <p></p>
+                <h2 class="text-center">Education</h2>
+                <p>
+                    <span class="font-weight-bold">PROGRAMMING COURSES - PROG.KIEV.UA</span><br>
+                    <span>Java Start, Java OOP, Java Pro (J2EE)</span><br>
+                    <span class="font-italic">2015-2017</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">KYIV NATIONAL ECONOMIC UNIVERSITY</span><br>
+                    <span>Economics, specialization - Business Economics (3rd year)</span><br>
+                    <span class="font-italic">2013-2014</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">NATIONAL TRANSPORT UNIVERSITY</span><br>
+                    <span>Transportation technology (for road transport)
+                    Specialization - Traffic & Road traffic organization (1st - 3rd year)
+                    </span><br>
+                    <span class="font-italic">2007-2010</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">KIEV TRANSPORT AND ECONOMIC TECHNICAL COLLEGE</span><br>
+                    <span>Transportation technology (for road transport)
+                     Specialization - Traffic & Road traffic organization
+                    </span><br>
+                    <span class="font-italic">2002-2006</span>
+                </p>
+                <h2 class="text-center">Experience</h2>
+                <p>
+                    <span class="font-weight-bold">HEAD OF PRODUCTION AND TECHNICAL DEPARTMENT</span><br>
+                    <span>KYIV REGIONAL ROAD ADMINISTRATION (KYIV BRANCH SVYATOSHYN DEU)
+                    with. Kapitanivka, Kiev region, Ukraine</span><br>
+                    <span class="font-italic">04-07.2017</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">DIRECTOR</span><br>
+                    <span>LTD. "DOR TRUST" Kyiv, Ukraine</span><br>
+                    <span class="font-italic">2013-2016</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">HEAD'S ASSISTANT</span><br>
+                    <span>LTD. "DOR TRUST" Kyiv, Ukraine</span><br>
+                    <span class="font-italic">2013</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">HEAD`S ASSISTANT</span><br>
+                    <span>LTD. "UZOL" Kyiv, Ukraine</span><br>
+                    <span class="font-italic">2012-2013</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">HEAD OF PRODUCTION AND TECHNICAL DEPARTMENT</span><br>
+                    <span>KYIV REGIONAL ROAD ADMINISTRATION (KYIV BRANCH SVYATOSHYN DEU)
+                    with. Kapitanivka, Kiev region, Ukraine</span><br>
+                    <span class="font-italic">2008-2012</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">SENIOR ENGINEER OF PRODUCTION DEPARTMENT</span><br>
+                    <span>KYIV REGIONAL ROAD ADMINISTRATION (KYIV BRANCH SVYATOSHYN DEU)
+                    with. Kapitanivka, Kiev region, Ukraine</span><br>
+                    <span class="font-italic">2006-2008</span>
+                </p>
+                <p>
+                    <span class="font-weight-bold">ROAD WORKER 4TH DEGREE</span><br>
+                    <span>KYIV REGIONAL ROAD ADMINISTRATION (KYIV BRANCH SVYATOSHYN DEU)
+                    with. Kapitanivka, Kiev region, Ukraine</span><br>
+                    <span class="font-italic">2005-2006</span>
+                </p>
             </div>
             <div id="section4" class="bg-danger">
                 <div class="row">
@@ -180,7 +247,7 @@
     <div class="row">
         <div class="col-3"></div>
         <div class="col-9 text-center">
-            <h2>The END page</h2>
+            <h2>To be continued... </h2>
         </div>
     </div>
 </section>
